# Artificer

./: .bazelignore  .bazelrc  .buildifier.json  .cursorignore  .cursorrules  .gitignore  BUILD  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  docker-compose.dev.yml  docker-compose.yml  flake.nix  mypy.ini  package-lock.json  pytest.ini  pytest_test.bzl  requirements.in  requirements.txt  ruff.toml
.claude/agents/: git-workflow-expert.md  lead-developer.md  sdet-test-architect.md
.cursor/plans/: consolidated-market-data-cli-56a36946.plan.md
.cursor/rules/: artificer-goals.md  bazel-monorepo-python.mdc  development-phase.mdc  development-workflow.mdc  linting-and-formatting.mdc  python-fastapi.mdc  python-ml.mdc  testing.mdc
.github/scripts/: release.py
.github/workflows/: auto-pr.yml  ci.yml  code-quality.yml  release.yml  version-check.yml
apps/algo_trader/: .gitignore
apps/algo_trader/domain/: models.py
apps/algo_trader_rust/: Cargo.toml
apps/algo_trader_rust/src/: main.rs
apps/pico/blink/: Cargo.toml
apps/pico2/blink/: Cargo.toml
apps/shortcuts/: flake.nix  shortcuts.py
apps/telemetry/dashboard/: index.html
apps/telemetry/gpu/: amd_gpu_textfile.py
apps/telemetry/prometheus/: prometheus.yml
apps/telemetry_rust/monitor/: rust-review.md
apps/telemetry_tdd_qwen/: .gitignore  Cargo.toml  flake.nix
apps/uno/blink/: Cargo.toml  rust-toolchain.toml
apps/uno/blink/.cargo/: config.toml
apps/uno/blink_pac/: Cargo.toml
apps/uno/blink_pac/src/: main.rs
apps/uno/led/: Cargo.toml  README.md
component/: BUILD  component.hpp  main.cpp
component/processor/: processor.hpp
component/processor/cpu/: cpu.hpp
component/software/finance/: BUILD  financial_instrument.py  schema.py  stock.py  timescale_enum.py  timescale_enum_test.py
docs/: artificer.md  custom-loop.md
infrastructure/: BUILD  client.py  config.py
infrastructure/client/: client.py
infrastructure/client/schwab/: BUILD  market_handler.py  schwab_client.py
infrastructure/clients/: BUILD  grafana_client.py  grafana_client_test.py  influx_client.py  influx_client_test.py  influxdb_client.py  redis_client.py  schwab_client.py
infrastructure/clients/redis/: BUILD  market_redis.py
infrastructure/clients/schwab/: BUILD  market_handler.py
infrastructure/grafana/: BUILD
infrastructure/influxdb/: BUILD  README.md  influxdb.py
infrastructure/logging/: BUILD  logger.py
infrastructure/multiprocess/: BUILD  process_manager.py
infrastructure/mysql/: BUILD
infrastructure/node_exporter/: BUILD
infrastructure/postgres/: BUILD  postgres.py
infrastructure/prometheus/: BUILD
infrastructure/raspberry_pi/: BUILD  README.md
infrastructure/redis/: BUILD  base_redis_client.py  redis.py  redis_cache_client.py  redis_kv_client.py  redis_lock_client.py  redis_pub_sub_client.py  redis_queue_client.py  redis_stream_client.py
infrastructure/redis/development/: docker-compose.yml
infrastructure/redis/production/: redis-cluster.yml  redis.conf
infrastructure/schwab/: BUILD  schwab.py
infrastructure/sqlite/: BUILD  sqlite.py
infrastructure/threads/: BUILD  test_manual.py  thread_manager.py
infrastructure/timescaledb/: BUILD  timescaledb.py
libs/: config.py
libs/computer_telemetry/: flake.nix
libs/logging/: logger.py
libs/microlib/: .gitignore  Cargo.toml  flake.nix
libs/microlib/src/: button.rs  key.rs  lib.rs  pulse.rs
libs/multiprocess/: process_manager.py
libs/mysql/: mysql.py
libs/postgres/: postgres.py
libs/threads/: thread_manager.py
scripts/: format.sh  grafana.sh  lint.sh  redis-env.sh  setup-hooks.sh  version-check.sh
services/telemetry-collector/: BUILD  Cargo.toml  DEVELOPMENT.md
services/telemetry-collector/migrations/: README.md
services/telemetry-collector/src/: main.cpp  models.cpp  models.hpp
services/telemetry-collector/src/collectors/: base.hpp  mod.rs
services/telemetry-collector/src/models/: telemetry_message.cpp  telemetry_message.hpp
services/telemetry-collector/src/models/cpu/: cpu_metrics.cpp  cpu_metrics.hpp
services/telemetry-collector/src/publishers/: base.hpp  mod.rs
services/telemetry-collector/tests/: test_models.cpp
system/: BUILD
system/algo-trader/: BUILD  strategy.py
system/algo-trader/redis/: BUILD  account.py  historical_market.py
system/algo-trader/schwab/: BUILD  account_handler.py  market_handler.py
system/algo-trader/service/: BUILD  market_base.py
system/algo-trader/strategy/: BUILD  base_strategy.py  calculation.py
system/algo_trader/: BUILD  README.md  __init__.py  config.py  developer.md  docker-compose.yaml  main.py  redis_client.py  redis_client_test.py  run_grafana.sh  schwab_handler.py  schwab_handler_test.py
system/algo_trader/adapters/: BUILD
system/algo_trader/analysis/: BUILD  dash_app.py  queries.py
system/algo_trader/apps/: BUILD  backtest_app.py  forward_app.py
system/algo_trader/backtest/: BUILD  cli_utils.py  engine.py  execution.py  main.py  ohlcv_cache.py  portfolio_main.py  processor.py  results.py  strategy_wrapper.py  utils.py
system/learn_rust/: BUILD
system/telemetry/: BUILD  README.md  system_info_textfile.py
system/trader/: BUILD  account.py  schema.py  test_data_pipeline.py
tests/infrastructure/: BUILD  README.md  influx_test.py  test_client.py  test_config.py  test_runner.py
tools/: BUILD  README.md
utilities/alacritty/: alacritty.toml
utilities/i3/: config
utilities/nvim/: init.lua  lazy-lock.json
utilities/tmux/: tmux.conf
utilities/vim/: vimrc
utilities/vscode/: keybindings.json  settings.json
utils/alacritty/: alacritty.toml  alacritty.toml.3901fe21.bak
utils/hypr/: hyprland.lua  hyprlock.conf  hyprpaper.conf
utils/i3/: config
utils/i3status/: config
utils/niri/: config.kdl
utils/nixos/: common.nix  flake.nix
utils/nvim/: init.lua  lazy-lock.json
utils/opencode/: opencode.json
utils/rofi/: config.rasi
utils/sway/: config
utils/tmux/: tmux.conf
utils/vscode/: keybindings.json
utils/waybar/: config.jsonc  style.css
utils/yazi/: theme.toml  yazi.toml
utils/zed/: matts-green.json
(+730 files in other folders)
