[package]
name = "microlib"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = { version = "0.3", optional = true }
futures = "0.3"

[dev-dependencies]
futures = "0.3"

[features]
defmt = ["dep:defmt"]

[lints.rust]
async_fn_in_trait = "allow"
