[package]
name = "telemetry-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
# Exact version pinning - no ranges for reproducible builds
# Async runtime
tokio = { version = "=1.40.0", features = ["full"] }

# Configuration & Environment Variables
config = "=0.14.0"
serde = { version = "=1.0.210", features = ["derive"] }

# Redis client
redis = { version = "=0.26.1", features = ["tokio-comp"] }

# Error handling
anyhow = "=1.0.89"
thiserror = "=1.0.64"

# Logging
tracing = "=0.1.40" 
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

# System information
sysinfo = "=0.31.4"

# Time utilities
chrono = { version = "=0.4.38", features = ["serde"] }

# JSON serialization
serde_json = "=1.0.128"

# UUID generation for message IDs
uuid = { version = "=1.11.0", features = ["v4"] }

# Async traits
async-trait = "=0.1.85"