[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blink"
test = false
bench = false

[dependencies]
panic-halt = "1.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.8.1"
features = ["atmega328p"]

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
